--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="Join Rich and Pat as they navigate college-adult life in LA and bring on their friends to share their stories and grand projects with the world." />
+
+    <!-- Open Graph meta tags = control how URLs are displayed when shared on social media (e.g. Facebook, Twitter, LinkedIn) --> 
+		<meta property="og:site_name" content="It's Over Podcast" />
+		<meta property="og:title" content="It's Over Podcast" />
+		<meta property="og:url" content="https://itsoverpod.com/" />
+		<meta property="og:type" content="website" />
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:description" content="Join Rich and Pat as they navigate college-adult life in LA and bring on their friends to share their stories and grand projects with the world." />
+    <meta property="og:image" content="https://itsoverpod.com/thumbnail.jpg"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>It's Over Podcast</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
