Add Google Analytics script

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-75P9ZMTYTT"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-75P9ZMTYTT");
+    </script>
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Join Rich and Pat as they navigate college-adult life in LA and bring on their friends to share their stories and grand projects with the world." />
+    <meta
+      name="description"
+      content="Join Rich and Pat as they navigate college-adult life in LA and bring on their friends to share their stories and grand projects with the world."
+    />
 
-    <!-- Open Graph meta tags = control how URLs are displayed when shared on social media (e.g. Facebook, Twitter, LinkedIn) --> 
-		<meta property="og:site_name" content="It's Over Podcast" />
-		<meta property="og:title" content="It's Over Podcast" />
-		<meta property="og:url" content="https://itsoverpod.com/" />
-		<meta property="og:type" content="website" />
-		<meta property="og:locale" content="en_US" />
-		<meta property="og:description" content="Join Rich and Pat as they navigate college-adult life in LA and bring on their friends to share their stories and grand projects with the world." />
-    <meta property="og:image" content="https://itsoverpod.com/thumbnail.jpg"/>
+    <!-- Open Graph meta tags = control how URLs are displayed when shared on social media (e.g. Facebook, Twitter, LinkedIn) -->
+    <meta property="og:site_name" content="It's Over Podcast" />
+    <meta property="og:title" content="It's Over Podcast" />
+    <meta property="og:url" content="https://itsoverpod.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta
+      property="og:description"
+      content="Join Rich and Pat as they navigate college-adult life in LA and bring on their friends to share their stories and grand projects with the world."
+    />
+    <meta property="og:image" content="https://itsoverpod.com/thumbnail.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
